# design-of-distributed-systems

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
src/bot/: clients_manger.py  main.py
src/bot/brodcast/: listen.py  send.py
src/client/: main.py  schemas.py
src/monitoring/: main.py
src/monitoring/templates/: index.html
src/server/: exceptions.py  main.py  schemas.py  services.py
